--- a/src/views/Healthy/styles.scss
+++ b/src/views/Healthy/styles.scss
@@ -6,11 +6,12 @@
   user-select: none;
 }
 
+// Home screen
 .container-background {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 
   background: url(../../assets/BackgroundsImages/home.svg);
@@ -33,7 +34,7 @@
   width: 350px;
   height: 40px;
   padding-left: 10px;
-  border: 3px solid gray;
+  border: 3px solid #808080;
   border-radius: 5px;
   font-size: 18px;
   font-weight: 400;
@@ -49,7 +50,7 @@
   border: none;
   border-radius: 3px;
   background-color: #9acd32;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-left: 15px;
   cursor: pointer;
 }
@@ -60,4 +61,44 @@
 
 .button-home:active {
   opacity: 0.5;
+}
+
+// Screen Best Recipes
+.container-best {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+}
+
+.title-best {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #05053d;
+  font-size: 40px;
+  font-weight: 900;
+}
+
+.paragraph-one {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 5px;
+  color: #808080;
+}
+
+.paragraph-two {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #808080;
+  margin-bottom: 30px;
+}
+
+.card-food {
+  display: flex;
+  flex-direction: row;
+  gap:350px;
+  margin-left: 200px;
+  margin-bottom: 20px;
 }
