--- a/src/components/UpBar/styles.scss
+++ b/src/components/UpBar/styles.scss
@@ -70,7 +70,7 @@ span {
     height: 40px;
     background-color: #ffffff;
     position: fixed;
-    padding-top: 15px;
+    padding: 15px 0;
   }
 
   span {
