--- a/src/views/Healthy/styles.scss
+++ b/src/views/Healthy/styles.scss
@@ -29,8 +29,14 @@
   line-height: 60px;
 }
 
-.input-home {
-  margin: 20px 0 0 200px;
+.input-button {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.input-button input {
+  margin-left: 200px;
   width: 350px;
   height: 40px;
   padding-left: 10px;
@@ -44,7 +50,7 @@
   opacity: 0.8;
 }
 
-.button-home {
+.input-button button {
   width: 43px;
   height: 40px;
   border: none;
@@ -63,7 +69,110 @@
   opacity: 0.5;
 }
 
+@media (max-width: 640px) {
+  .container-background {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    height: 100vh;
+    background: none;
+
+    background: url(../../assets/BackgroundsImages/home.svg);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: cover;
+
+    .description {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      font-size: 25px;
+      font-weight: 700;
+      margin-top: 250px;
+      color: #05053d;
+    }
+
+    .input-button input {
+      margin-left: 10px;
+      width: 85%;
+      height: 40px;
+      padding-left: 10px;
+      border: 3px solid #808080;
+      border-radius: 5px;
+      font-size: 18px;
+      font-weight: 400;
+    }
+
+    .input-button button {
+      width: 43px;
+      height: 40px;
+      border: none;
+      border-radius: 3px;
+      background-color: #9acd32;
+      margin-left: 10px;
+      cursor: pointer;
+
+      .bx-search-alt-2 {
+        margin: auto;
+        font-size: 28px;
+        color: #ffffff;
+      }
+    }
+  }
+}
+
 // Screen Best Recipes
+@media (max-width: 640px) {
+  .container-best {
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    width: 100%;
+
+    .title-best {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: #05053d;
+      font-size: 30px;
+      font-weight: 900;
+    }
+
+    .paragraph-one {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      margin: 0;
+      margin-top: 5px;
+      font-size: 14px;
+
+      color: #808080;
+    }
+
+    .paragraph-two {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: #808080;
+      font-size: 14px;
+
+      margin-bottom: 30px;
+    }
+
+    .card-food {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      margin: 0;
+      margin-bottom: 20px;
+      margin-left: 10px;
+    }
+  }
+}
+
 .container-best {
   display: flex;
   flex-direction: column;
@@ -98,7 +207,7 @@
 .card-food {
   display: flex;
   flex-direction: row;
-  gap:350px;
+  gap: 350px;
   margin-left: 200px;
   margin-bottom: 20px;
 }
