refactor: update background image

--- a/src/views/Healthy/styles.scss
+++ b/src/views/Healthy/styles.scss
@@ -80,8 +80,7 @@
 
     background: url(../../assets/BackgroundsImages/home.svg);
     background-repeat: no-repeat;
-    background-position: right;
-    background-size: cover;
+    background-position: left;
 
     .description {
       display: flex;
