--- a/src/components/CardFood/styles.scss
+++ b/src/components/CardFood/styles.scss
@@ -28,6 +28,14 @@
     background-color: #9acd32;
     margin-top: 5px;
   }
+
+  button:hover {
+    opacity: 0.8;
+  }
+
+  button:active {
+    opacity: 0.8;
+  }
 }
 
 @media (max-width: 640px) {
@@ -35,7 +43,7 @@
     display: flex;
     flex-direction: row;
     width: 80%;
-  
+
     img {
       width: 150px;
     }
@@ -47,14 +55,14 @@
       margin: auto;
       margin-left: 20px;
     }
-  
+
     .description {
       line-height: normal;
       font-size: 20px;
       margin: 0;
       width: 90%;
     }
-  
+
     button {
       width: 70px;
       height: 30px;
