refactor: finalized home screen changes

--- a/src/views/Healthy/styles.scss
+++ b/src/views/Healthy/styles.scss
@@ -61,6 +61,12 @@
   cursor: pointer;
 }
 
+.bx-search-alt-2 {
+  margin: auto;
+  font-size: 28px;
+  color: #ffffff;
+}
+
 .button-home:hover {
   opacity: 0.8;
 }
