--- a/src/components/CardFood/styles.scss
+++ b/src/components/CardFood/styles.scss
@@ -27,6 +27,7 @@
     border-radius: 5px;
     background-color: #9acd32;
     margin-top: 5px;
+    cursor: pointer;
   }
 
   button:hover {
@@ -36,6 +37,12 @@
   button:active {
     opacity: 0.8;
   }
+}
+
+.container-card:hover {
+  opacity: 0.8;
+  transform: translateY(-10px);
+  cursor: pointer;
 }
 
 @media (max-width: 640px) {
