feat: finished blog screen

--- a/src/views/Healthy/styles.scss
+++ b/src/views/Healthy/styles.scss
@@ -139,7 +139,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      color: #05053d;
+      color: #0b0b74;
       font-size: 30px;
       font-weight: 900;
     }
@@ -187,7 +187,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #05053d;
+  color: #0b0b74;
   font-size: 40px;
   font-weight: 900;
 }
