--- a/src/views/Blog/styles.scss
+++ b/src/views/Blog/styles.scss
@@ -55,18 +55,80 @@
   opacity: 0.5;
 }
 
-
-// Read Our Blog
-.blog{
+@media (max-width: 640px) {
+  .container-blog {
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    height: 100vh;
+
+    background: url(../../assets/BackgroundsImages/service.svg);
+    background-repeat: no-repeat;
+    background-position: right;
+
+    .title-blog {
+      margin: 0 auto;
+      margin-top: 100px;
+      color: #0b0b74;
+      width: 80%;
+      font-weight: 900;
+      line-height: 40px;
+      font-size: 30px;
+    }
+
+    .description-blog {
+      display: flex;
+      font-size: 20px;
+      font-weight: 700;
+      margin: 0 auto;
+      margin-top: 30px;
+      color: #808080;
+      width: 80%;
+      line-height: 20px;
+    }
+
+    .button-blog {
+      width: 150px;
+      height: 50px;
+      border: none;
+      border-radius: 3px;
+      background-color: #9acd32;
+      cursor: pointer;
+      margin-left: 40px;
+      margin-top: 30px;
+
+      a {
+        text-decoration: none;
+        color: #ffffff;
+        font-size: 20px;
+      }
+    }
+  }
+}
+// Read Our Blog
+.blog {
+  display: flex;
   flex-direction: column;
   margin-top: 50px;
 }
 
-.card-blog {
+.carousel-min {
+  display: none;
+}
+
+@media (max-width: 640px) {
+  .carousel-max {
+    display: none;
+  }
+
+  .carousel-min {
     display: flex;
-    flex-direction: row;
-    gap: 20px;
-    margin-left: 200px;
     margin-bottom: 20px;
   }
+
+  .paragraph-one {
+    text-align: center;
+    margin-bottom: 5px;
+  }
+}
