refactor: Updated Register Screen

--- a/src/views/Register/styles.scss
+++ b/src/views/Register/styles.scss
@@ -39,6 +39,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     border: 3px solid #808080;
     border-radius: 5px;
     font-weight: 400;
+    color: #808080;
   }
 
   span {
