--- a/src/views/Blog/styles.scss
+++ b/src/views/Blog/styles.scss
@@ -57,53 +57,26 @@
 
 @media (max-width: 640px) {
   .container-blog {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
-    height: 100vh;
-
-    background: url(../../assets/BackgroundsImages/service.svg);
-    background-repeat: no-repeat;
-    background-position: right;
+    background-position: 150%;
 
     .title-blog {
       margin: 0 auto;
       margin-top: 100px;
-      color: #0b0b74;
       width: 80%;
-      font-weight: 900;
       line-height: 40px;
       font-size: 30px;
     }
   }
 
   .description-blog {
-    display: flex;
-    font-size: 20px;
-    font-weight: 700;
     margin: 0 auto;
     margin-top: 30px;
-    color: #808080;
     width: 80%;
     line-height: 20px;
   }
 
   .button-blog {
-    width: 150px;
-    height: 50px;
-    border: none;
-    border-radius: 3px;
-    background-color: #9acd32;
-    cursor: pointer;
     margin-left: 40px;
-    margin-top: 30px;
-
-    a {
-      text-decoration: none;
-      color: #ffffff;
-      font-size: 20px;
-    }
   }
 }
 // Read Our Blog
@@ -123,9 +96,7 @@
   }
 
   .carousel-min {
-    visibility: visible;
     display: flex;
-    margin-bottom: 20px;
   }
 
   .paragraph-one {
