--- a/src/views/Join/styles.scss
+++ b/src/views/Join/styles.scss
@@ -43,7 +43,7 @@
   }
 
   button {
-    width: 80px;
+    width: 150px;
     height: 50px;
     border: none;
     border-radius: 3px;
@@ -51,7 +51,8 @@
     cursor: pointer;
     color: #ffffff;
     margin-left: 10px;
-    font-size: 16px;
+    font-size: 18px;
+    font-weight: 500;
   }
 }
 
@@ -92,51 +93,22 @@ button:active {
 
 @media (max-width: 640px) {
   .container-join {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
-    height: 100vh;
-
-    background: url(../../assets/BackgroundsImages/join.svg);
-    background-repeat: no-repeat;
-    background-position: right;
+    background-position: 60%;
 
     h1 {
       margin: 0 auto;
       margin-top: 70px;
-      color: #0b0b74;
       width: 80%;
-      font-weight: 900;
       line-height: 40px;
       font-size: 30px;
     }
 
     .div-input-button {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
       margin-top: 200px;
     }
 
     input {
       width: 100%;
-      height: 50px;
-      padding-left: 10px;
-      margin-left: 10px;
-      font-size: 18px;
-      border: 3px solid #808080;
-      border-radius: 5px;
-      font-weight: 400;
-    }
-
-    button {
-      width: 150px;
-      height: 50px;
-      border: none;
-      border-radius: 3px;
-      background-color: #9acd32;
-      cursor: pointer;
       margin-left: 10px;
     }
   }
@@ -151,11 +123,7 @@ button:active {
     padding-left: 15px;
 
     div {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
       width: 100%;
-      gap: 40px;
       color: #808080;
       padding-right: 15px;
       padding-top: 20px;
